[gd_scene load_steps=5 format=3 uid="uid://b7kwldoae7ux7"]

[ext_resource type="Texture2D" uid="uid://wyyv03sxvti3" path="res://assets/gameplay/slingshot.png" id="1_5l4ma"]
[ext_resource type="Script" path="res://scenes/slingshot.gd" id="1_j2vjb"]
[ext_resource type="Texture2D" uid="uid://bkmj8jssoncuw" path="res://assets/gameplay/slingshot_2.png" id="2_yn4nk"]
[ext_resource type="PackedScene" uid="uid://cs0ukvcxrnd1c" path="res://scenes/elastic.tscn" id="3_aj841"]

[node name="Slingshot" type="Node2D"]
script = ExtResource("1_j2vjb")

[node name="SlingshotBack" type="Sprite2D" parent="."]
z_index = -1
position = Vector2(-8, -7)
texture = ExtResource("1_5l4ma")

[node name="SlingshotFront" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(-21, -56)
texture = ExtResource("2_yn4nk")

[node name="LaunchPoint" type="Marker2D" parent="."]
position = Vector2(0, -82)

[node name="ElasticBack" parent="." instance=ExtResource("3_aj841")]
z_index = -1
position = Vector2(11, -82)

[node name="ElasticFront" parent="." instance=ExtResource("3_aj841")]
position = Vector2(-22, -79)
